# smellnet-autoresearch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: findings.md  publishing_notes.md
openspec/: project.md
openspec/changes/add-smellnet-autoresearch-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/add-smellnet-autoresearch-pipeline/specs/autoresearch-harness/: spec.md
openspec/changes/add-smellnet-autoresearch-pipeline/specs/inference-artifacts/: spec.md
smellnet_autoresearch/: README.md  __init__.py  datasets.py  evaluation.py  losses.py  model_zoo.py  prepare.py  program.md  search.py  search_contrastive.py  search_phase2.py  taxonomy.py  train.py
tests/: test_imports.py
