[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smellnet-autoresearch"
version = "0.1.0"
description = "Autoresearch and benchmark tooling for SmellNet-style smell recognition experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Sacha Martinelle"},
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
include = ["smellnet_autoresearch*"]

[tool.ruff]
line-length = 100
target-version = "py310"
